--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                                 <div class="op">
                                     <div class="retragular2"></div>
                                     <p id="detail">Smooth and rich tomato based makhani gravy with cream and butter with
-                                        tandoori chicken
+                                        tandoori chicken.
                                     </p>
                                 </div>
                                 <div class="buts">
@@ -254,7 +254,7 @@
 
     <section id="Chefs">
         <div class="secdiv k8">
-            <p>Our Chef's</p>
+            <p>Our Expert Chef's</p>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur velit soluta rem possimus veritatis
                 veniam doloribus eos totam enim aut.</p>
         </div>
@@ -274,68 +274,52 @@
 
 
     <section id="review">
-        <div class="secdiv h6">
+        <div class="secdiv k7">
             <p>What Others Are Saying</p>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur velit soluta rem possimus veritatis
                 veniam doloribus eos totam enim aut.</p>
         </div>
-        <!-- ============================= -->
-        <!-- Slider main container -->
-        <div class="wraptest">
-            <div class="swiper test">
-                <!-- Additional required wrapper -->
-                <div class="swiper-wrapper">
-                    <!-- Slides -->
-                    <div class="swiper-slide">
-                        <div class="testmonial">
-                            <div class="ts">1
-                            </div>
-                        </div>
-                    </div>
-                    <div class="swiper-slide">
-                        <div class="testmonial">
-                            <div class="ts">2
-                            </div>
-                        </div>
-                    </div>
-                    <div class="swiper-slide">
-                        <div class="testmonial">
-                            <div class="ts">3
-                            </div>
-                        </div>
-                    </div>
-                    <div class="swiper-slide">
-                        <div class="testmonial">
-                            <div class="ts">4
-                            </div>
-                        </div>
-                    </div>
-                    <div class="swiper-slide">
-                        <div class="testmonial">
-                            <div class="ts">5
-                            </div>
-                        </div>
-                    </div>
-                    <div class="swiper-slide">
-                        <div class="testmonial">
-                            <div class="ts">6
-                            </div>
-                        </div>
-                    </div>
-                    ...
+        <div class="review_cont">
+            <div class="rev_text">
+                <div class="us_text activetext">
+                    <i class="fas fa-quote-left"></i>
+                    <p> can't say enough good things about [Restaurant Name]! The atmosphere is cozy, the staff is friendly, and the food is simply outstanding. From the moment you walk in, you feel a warm welcome. My favorite dish is the [Signature Dish]—it's a taste sensation that keeps me coming back for more. If you haven't tried [Restaurant Name] yet, you're missing out!</p>
+                    <span>Sarah Thompson<span>
                 </div>
-                <!-- If we need pagination -->
-                <div class="swiper-pagination"></div>
-    
-                <!-- If we need navigation buttons -->
-                <div class="swiper-button-prev"></div>
-                <div class="swiper-button-next"></div>
-    
+
+                <div class="us_text ">
+                    <i class="fas fa-quote-left"></i>
+                    <p>As a self-proclaimed foodie, I've tried countless restaurants, and [Restaurant Name] is at the top of my list. The attention to detail in every dish is impeccable. The fusion of flavors is nothing short of culinary genius. The [Chef's Special] is a must-try! The ambiance is perfect for any occasion, whether it's a casual dinner or a special celebration.</p>
+                    <span>James Rodriguez</span>
+                </div>
+
+                <div class="us_text ">
+                    <i class="fas fa-quote-left"></i>
+                    <p>I recently celebrated my birthday at [Restaurant Name], and it was an unforgettable experience. The staff went above and beyond to make the evening special. The menu offers a fantastic variety, and each dish is a work of art. The [Dessert Name] was the perfect sweet ending to my celebration.</p>
+                    <span>Emily Chen<span>
+                </div>
+
+                <div class="us_text">
+                    <i class="fas fa-quote-left"></i>
+                    <p>I'm a regular at [Restaurant Name], and for good reason. The consistency in quality is impressive. The chefs know how to elevate simple ingredients into extraordinary dishes. </p>
+                    <span>David Patel</span>
+                </div>
+
+                <div class="us_text">
+                    <i class="fas fa-quote-left"></i>
+                    <p>I recently discovered [Restaurant Name] and instantly fell in love. The menu is a delightful mix of flavors, and the presentation is Instagram-worthy. The vegetarian options are some of the best I've ever had—especially the [Vegetarian Dish]. The staff is knowledgeable and attentive, making sure every dining experience is enjoyable.</p>
+                    <span>Alicia Walker</span>
+                </div>
+            </div>
+            <div class="r_pic">
+                <img src="./src/review/p1.jpg" onclick="showreview()" class="user_pic activepic" alt="">
+                <img src="./src/review/p2.jpg" onclick="showreview()" class="user_pic " alt="">
+                <img src="./src/review/p4.jpg" onclick="showreview()" class="user_pic " alt="">
+                <img src="./src/review/p3.jpg" onclick="showreview()" class="user_pic " alt="">
+                <img src="./src/review/p5.jpg" onclick="showreview()" class="user_pic " alt="">
+
             </div>
         </div>
-
-
-        <!-- ============================= -->
 
     </section>
 
@@ -389,7 +373,7 @@
 
     </footer>
 
-
+    <script src="https://kit.fontawesome.com/2f9de29a88.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="./main.js"></script>
 </body>
