--- a/index.html
+++ b/index.html
@@ -34,12 +34,15 @@
                 <ul><a class="" href="#review">Review</a></ul>
                 <ul><a class="" href="#order">Order</a></ul>
             </div>
-            <div class="cart">
+            <div class="cart" onclick="ac_cart()">
                 <i class="uil uil-shopping-cart-alt"></i>
+                <span class="cartno">0</span>
             </div>
         </div>
     </nav>
+<div class="cart_wraper">
 
+</div>
     <section id="hero">
 
         <!-- ============================== -->
