fix add to cart

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         rel="stylesheet">
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css">
     <link rel="stylesheet" href="style.css">
-    <title>Restaurant</title>
+    <title>FoodLane</title>
 </head>
 
 <body>
@@ -22,7 +22,7 @@
             <div class="logo">
                 <a id="hlogo" href="/">
                     <i class="uil uil-restaurant"></i>
-                    <p>FOOD.ME</p>
+                    <p>FoodLane</p>
                 </a>
             </div>
             <div class="nav">
@@ -40,9 +40,25 @@
             </div>
         </div>
     </nav>
-<div class="cart_wraper">
+<!-- cart page -->
+<div class="cartsection">
+    <div class="cart_wraper">
 
+        <!-- here goes the cart data -->
+        
+    </div>
+    <div class="cartbtnarea">
+        <div class="cart_btns">
+            <button>but1</button>
+            <button>but2</button>
+        </div>
+    </div>
 </div>
+
+
+
+
+
     <section id="hero">
 
         <!-- ============================== -->
@@ -190,7 +206,7 @@
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni nihil inventore provident officia
                         cupiditate consequuntur ducimus assumenda fugit et pariatur hic voluptatibus ullam voluptate,
                         placeat facilis!</p>
-                    <button id="btn4">About us <i class="uil uil-rocket"></i></button>
+                    <button id="btn4">About us</button>
                 </div>
             </div>
             <div class="t2">
