--- a/index.html
+++ b/index.html
@@ -40,26 +40,31 @@
             </div>
         </div>
     </nav>
-<!-- cart page -->
-<div class="cartsection">
-    <div class="cart_wraper">
+    <!-- cart page -->
+    <div class="cartsection">
+        <div class="cart_wraper">
 
-        <!-- here goes the cart data -->
-        
-    </div>
-    <div class="cartbtnarea">
-        <div class="cart_btns">
-            <button>but1</button>
-            <button>but2</button>
+            <!-- here goes the cart data -->
+
+        </div>
+        <div class="cartbtnarea">
+            <div class="cart_btns">
+                <div class="orderfrom_cart">
+                    <span class="totalprice"><i class="uil uil-rupee-sign"></i>0</span>
+                    <button>Place Order</button>
+                </div>
+            </div>
         </div>
     </div>
-</div>
 
 
 
 
 
     <section id="hero">
+        <div class="designbg">
+            
+        </div>
 
         <!-- ============================== -->
         <!-- Swiper -->
@@ -302,31 +307,44 @@
             <div class="rev_text">
                 <div class="us_text activetext">
                     <i class="fas fa-quote-left"></i>
-                    <p> can't say enough good things about [Restaurant Name]! The atmosphere is cozy, the staff is friendly, and the food is simply outstanding. From the moment you walk in, you feel a warm welcome. My favorite dish is the [Signature Dish]—it's a taste sensation that keeps me coming back for more. If you haven't tried [Restaurant Name] yet, you're missing out!</p>
+                    <p> can't say enough good things about [Restaurant Name]! The atmosphere is cozy, the staff is
+                        friendly, and the food is simply outstanding. From the moment you walk in, you feel a warm
+                        welcome. My favorite dish is the [Signature Dish]—it's a taste sensation that keeps me coming
+                        back for more. If you haven't tried [Restaurant Name] yet, you're missing out!</p>
                     <span>Sarah Thompson<span>
                 </div>
 
                 <div class="us_text ">
                     <i class="fas fa-quote-left"></i>
-                    <p>As a self-proclaimed foodie, I've tried countless restaurants, and [Restaurant Name] is at the top of my list. The attention to detail in every dish is impeccable. The fusion of flavors is nothing short of culinary genius. The [Chef's Special] is a must-try! The ambiance is perfect for any occasion, whether it's a casual dinner or a special celebration.</p>
+                    <p>As a self-proclaimed foodie, I've tried countless restaurants, and [Restaurant Name] is at the
+                        top of my list. The attention to detail in every dish is impeccable. The fusion of flavors is
+                        nothing short of culinary genius. The [Chef's Special] is a must-try! The ambiance is perfect
+                        for any occasion, whether it's a casual dinner or a special celebration.</p>
                     <span>James Rodriguez</span>
                 </div>
 
                 <div class="us_text ">
                     <i class="fas fa-quote-left"></i>
-                    <p>I recently celebrated my birthday at [Restaurant Name], and it was an unforgettable experience. The staff went above and beyond to make the evening special. The menu offers a fantastic variety, and each dish is a work of art. The [Dessert Name] was the perfect sweet ending to my celebration.</p>
+                    <p>I recently celebrated my birthday at [Restaurant Name], and it was an unforgettable experience.
+                        The staff went above and beyond to make the evening special. The menu offers a fantastic
+                        variety, and each dish is a work of art. The [Dessert Name] was the perfect sweet ending to my
+                        celebration.</p>
                     <span>Emily Chen<span>
                 </div>
 
                 <div class="us_text">
                     <i class="fas fa-quote-left"></i>
-                    <p>I'm a regular at [Restaurant Name], and for good reason. The consistency in quality is impressive. The chefs know how to elevate simple ingredients into extraordinary dishes. </p>
+                    <p>I'm a regular at [Restaurant Name], and for good reason. The consistency in quality is
+                        impressive. The chefs know how to elevate simple ingredients into extraordinary dishes. </p>
                     <span>David Patel</span>
                 </div>
 
                 <div class="us_text">
                     <i class="fas fa-quote-left"></i>
-                    <p>I recently discovered [Restaurant Name] and instantly fell in love. The menu is a delightful mix of flavors, and the presentation is Instagram-worthy. The vegetarian options are some of the best I've ever had—especially the [Vegetarian Dish]. The staff is knowledgeable and attentive, making sure every dining experience is enjoyable.</p>
+                    <p>I recently discovered [Restaurant Name] and instantly fell in love. The menu is a delightful mix
+                        of flavors, and the presentation is Instagram-worthy. The vegetarian options are some of the
+                        best I've ever had—especially the [Vegetarian Dish]. The staff is knowledgeable and attentive,
+                        making sure every dining experience is enjoyable.</p>
                     <span>Alicia Walker</span>
                 </div>
             </div>
@@ -388,8 +406,23 @@
     <div class="loader_con">
         <img src="./src/food.gif" alt="">
     </div>
-    <footer>
 
+
+    <footer>
+        <div class="footer_wraper">
+            <div class="mainfooter">
+
+            </div>
+            <div class="bottom_footer">
+                <div class="footer-row">
+                    <p><a href="faq.html">FAQ</a> | <a href="terms.html">Terms and Conditions</a> | <a
+                            href="https://github.com/yourusername/restaurant-app" target="_blank">GitHub Project</a></p>
+                </div>
+                <div class="footer-row">
+                    <p>&copy; 2023 Restaurant App. All rights reserved.</p>
+                </div>
+            </div>
+        </div>
     </footer>
 
     <script src="https://kit.fontawesome.com/2f9de29a88.js" crossorigin="anonymous"></script>
