--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
     <section id="hero">
         <div class="designbg">
-            
+
         </div>
 
         <!-- ============================== -->
@@ -384,7 +384,7 @@
                 <label for="">Your Address</label><br>
                 <textarea id="mes" type="text"></textarea>
                 <br>
-                <button id="btn4">Order <i class="uil uil-utensils-alt"></i></button>
+                <button id="btns4">Order <i class="uil uil-utensils-alt"></i></button>
             </div>
 
             <div class="f2">
@@ -411,7 +411,24 @@
     <footer>
         <div class="footer_wraper">
             <div class="mainfooter">
-
+                <div class="rname">
+                    <p id="fid">FoodLane.me</p>
+                </div>
+                <div class="rcont">
+                    <p>Connect with us</p>
+                </div>
+                <div class="menu_foot">
+                    <p id="ftilt">menu</p>
+                    <ul><a href="">About us</a></ul>
+                    <ul><a href="">Contact us</a></ul>
+                    <ul><a href="">Book a table</a></ul>
+                    <ul><a href="">Dishes</a></ul>
+                </div>
+                <div class="getint">
+                    <p id="ftilt">Get in touch</p>
+                    <ul id="feedback">Questions or Feedback ?</ul>
+                    <ul id="feedback">We'd love to hear from you</ul>
+                </div>
             </div>
             <div class="bottom_footer">
                 <div class="footer-row">
@@ -419,7 +436,7 @@
                             href="https://github.com/yourusername/restaurant-app" target="_blank">GitHub Project</a></p>
                 </div>
                 <div class="footer-row">
-                    <p>&copy; 2023 Restaurant App. All rights reserved.</p>
+                    <p>&copy; 2023 FoodLane. All rights reserved.</p>
                 </div>
             </div>
         </div>
