--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
             <div class="nav">
                 <ul><a class="active" href="#hero">Home</a></ul>
                 <ul><a class="" href="#services">Services</a></ul>
-                <ul><a class="" href="#menu">Menu</a></ul>
                 <ul><a class="" href="#dishes">Dishes</a></ul>
                 <ul><a class="" href="#Chefs">About</a></ul>
                 <ul><a class="" href="#review">Review</a></ul>
@@ -43,12 +42,16 @@
     <!-- cart page -->
     <div class="cartsection">
         <div class="cart_wraper">
+            Your cart is empty
             <!-- here goes the cart data -->
         </div>
         <div class="cartbtnarea">
             <div class="cart_btns">
                 <div class="orderfrom_cart">
-                    <span class="totalprice"><i class="uil uil-rupee-sign"></i>0</span>
+                    <div class="placetotal">
+                        <span class="totalprice"><i class="uil uil-rupee-sign"></i>0</span>
+                        <p>Total Price</p>
+                    </div>
                     <button>Place Order</button>
                 </div>
             </div>
@@ -226,16 +229,6 @@
             </div>
         </div>
     </section>
-    <section id="menu">
-        <div class="secdiv k8">
-            <p>Our Popular Dishes</p>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur velit soluta rem possimus veritatis
-                veniam doloribus eos totam enim aut.</p>
-        </div>
-        <div class="m1 cardct">
-            <!-- featurd card -->
-        </div>
-    </section>
     <section id="dishes">
         <div class="secdiv">
             <p class="ko">Our Today's Special</p>
@@ -397,9 +390,9 @@
             </div>
         </div>
     </footer>
-    <script src="https://kit.fontawesome.com/2f9de29a88.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <script src="./main.js"></script>
+    <script src="https://kit.fontawesome.com/2f9de29a88.js" crossorigin="anonymous"></script>
+    <script src="main.js"></script>
 </body>
 
 </html>
