--- a/index.html
+++ b/index.html
@@ -65,92 +65,7 @@
         <!-- Swiper -->
         <div class="swiper mySwiper">
             <div class="swiper-wrapper">
-                <div class="swiper-slide">
-                    <div class="herosec">
-                        <div class="left">
-                            <div class="context">
-                                <div class="op">
-                                    <div class="retragular"></div>
-                                    <div class="text">
-                                        <p id="bold2">Creamy Lentil Delight</p>
-                                        <p id="reg2">Dal Makhani</p>
-                                    </div>
-                                </div>
-                                <div class="op">
-                                    <div class="retragular2"></div>
-                                    <p id="detail">Rich Black lentil delicacy, prepared with lushes tomato gravy, cream
-                                        and butter served with choice of breads or rice served with choice of breads or
-                                        rice.
-                                    </p>
-                                </div>
-                                <div class="buts">
-                                    <button id="btn2">Order Now</button>
-                                    <button id="btn3">Contact Us</button>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="right">
-                            <img id="food" src="./src/dal.png" alt="">
-                        </div>
-                    </div>
-                </div>
-                <div class="swiper-slide">
-                    <!--  -->
-                    <div class="herosec">
-                        <div class="left">
-                            <div class="context">
-                                <div class="op">
-                                    <div class="retragular"></div>
-                                    <div class="text">
-                                        <p id="bold2">Spice Your Mood</p>
-                                        <p id="reg2">Spicy Mix Vegetable</p>
-                                    </div>
-                                </div>
-                                <div class="op">
-                                    <div class="retragular2"></div>
-                                    <p id="detail">Seasonal vegetables tossed in rich indian spices.
-                                    </p>
-                                </div>
-                                <div class="buts">
-                                    <button id="btn2">Order Now</button>
-                                    <button id="btn3">Contact Us</button>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="right">
-                            <img id="food" src="./src/Group 10.png" alt="">
-                        </div>
-                    </div>
-                    <!--  -->
-                </div>
-                <div class="swiper-slide">
-                    <div class="herosec">
-                        <div class="left">
-                            <div class="context">
-                                <div class="op">
-                                    <div class="retragular"></div>
-                                    <div class="text">
-                                        <p id="bold2">Enjoy juicy goodness!</p>
-                                        <p id="reg2">Butter Chicken</p>
-                                    </div>
-                                </div>
-                                <div class="op">
-                                    <div class="retragular2"></div>
-                                    <p id="detail">Smooth and rich tomato based makhani gravy with cream and butter with
-                                        tandoori chicken.
-                                    </p>
-                                </div>
-                                <div class="buts">
-                                    <button id="btn2">Order Now</button>
-                                    <button id="btn3">Contact Us</button>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="right">
-                            <img id="food" src="./src/bc.png" alt="">
-                        </div>
-                    </div>
-                </div>
+                <!-- featured cards goes hear -->
             </div>
             <!-- <div class="swiper-button-next"></div> -->
             <!-- <div class="swiper-button-prev"></div> -->
