--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                         <span class="totalprice"><i class="uil uil-rupee-sign"></i>0</span>
                         <p>Total Price</p>
                     </div>
-                    <button>Place Order</button>
+                    <button class="order">Place Order</button>
                 </div>
             </div>
         </div>
