--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
                     <p>FoodLane</p>
                 </a>
             </div>
+            <div class="search-bar">
+                <input type="text" placeholder="Search for dishes...">
+                <button><i class="uil uil-search-alt"></i></button>
+            </div>
             <div class="nav">
                 <ul><a class="active" href="#hero">Home</a></ul>
                 <ul><a class="" href="#services">Services</a></ul>
@@ -34,12 +38,32 @@
                 <ul><a class="" href="#review">Review</a></ul>
                 <ul><a class="" href="#reservation">Booking</a></ul>
             </div>
-            <div class="cart" onclick="ac_cart()">
-                <i class="uil uil-shopping-cart-alt"></i>
-                <span class="cartno">0</span>
+            <div class="rightsidebtn">
+                <div class="menubtn">
+                    <button class="menubtn_id">Menu</button>
+                </div>
+                <div class="cart" onclick="ac_cart()">
+                    <i class="uil uil-shopping-cart-alt"></i>
+                    <span class="cartno">0</span>
+                </div>
             </div>
         </div>
     </nav>
+    <!-- menu page -->
+    <div class="menupage">
+        <div class="categories">
+            <button class="alactive" onclick="filteritem('All', this)">All</button>
+            <button class="category" onclick="filteritem('Breakfast', this)">Breakfast</button>
+            <button class="category" onclick="filteritem('Lunch', this)">Lunch</button>
+            <button class="category" onclick="filteritem('Snacks', this)">Snacks</button>
+            <button class="category" onclick="filteritem('Dinner', this)">Dinner</button>
+        </div>
+        <div class="wocon">
+            <div class="m1 m2">
+                <!-- card goes here -->
+            </div>
+        </div>
+    </div>
     <!-- cart page -->
     <div class="cartsection">
         <div class="cart_wraper">
@@ -89,7 +113,7 @@
                             <img src="./src/dish/14.jpeg">
                         </div>
                         <div class="circle">
-                            <img src="./src/dish/18.jpg">
+                            <img src="./src/dish/18.png">
                         </div>
                     </div>
                     <div class="no">
