--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
                     <!-- Submit Button -->
                     <div class="btnwrap_form">
                         <button type="submit" onclick="submit()" id="btns4" class="btn btn-primary">Submit</button>
-                        <button onclick="reset()" id="btns56" class="btnClear">clear</button>
+                        <!-- <button onclick="reset()" id="btns56" class="btnClear">clear</button> -->
                     </div>
                 </div>
 
