--- a/index.html
+++ b/index.html
@@ -133,9 +133,7 @@
             <div class="t1">
                 <div class="wrp">
                     <p>We Are More Than Multiple Service</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni nihil inventore provident officia
-                        cupiditate consequuntur ducimus assumenda fugit et pariatur hic voluptatibus ullam voluptate,
-                        placeat facilis!</p>
+                    <p>We transcend the ordinary as more than a mere service – our restaurant is an immersive experience that goes beyond the conventional. With a diverse range of offerings, we invite you to savor not just dishes, but moments of culinary delight. Uniting flavors, ambiance, and hospitality, we redefine dining as an elevated and multifaceted experience.</p>
                     <button id="btn4">About us</button>
                 </div>
             </div>
@@ -146,28 +144,28 @@
                             shopping_bag
                         </span>
                         <p id="bold">Online Order</p>
-                        <p id="reg4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, repudiandae.</p>
+                        <p id="reg4">Savor the Flavor from Anywhere: Seamless Online Ordering at Your Fingertips!</p>
                     </div>
                     <div class="s1">
                         <span class="material-symbols-outlined">
                             local_shipping
                         </span>
                         <p id="bold">Free delivery</p>
-                        <p id="reg4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, repudiandae.</p>
+                        <p id="reg4">Delightful Dishes, Delivered Free: Elevate Your Culinary Experience with Complimentary Delivery!</p>
                     </div>
                     <div class="s1">
                         <span class="material-symbols-outlined">
                             add_shopping_cart
                         </span>
                         <p id="bold">easy to order</p>
-                        <p id="reg4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, repudiandae.</p>
+                        <p id="reg4">Simplicity Meets Savory: Effortless Ordering, Extraordinary Dining Experiences!</p>
                     </div>
                     <div class="s1">
                         <span class="material-symbols-outlined">
                             local_convenience_store
                         </span>
                         <p id="bold">24/7 Support</p>
-                        <p id="reg4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis, repudiandae.</p>
+                        <p id="reg4">Around the Clock Excellence: Your Culinary Journey, Our Commitment – 24/7 Support for Your Every Craving!</p>
                     </div>
                 </div>
             </div>
@@ -296,7 +294,7 @@
 
                     <!-- Submit Button -->
                     <div class="btnwrap_form">
-                        <button type="submit" onclick="submit()" id="btns4" class="btn btn-primary">Submit</button>
+                        <button type="submit" onclick="submit()" id="btns4" class="btn btn-primary">Book a Table <i class="uil uil-transaction"></i></button>
                         <!-- <button onclick="reset()" id="btns56" class="btnClear">clear</button> -->
                     </div>
                 </div>
